add: border radius

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       }
       video {
         width: 100%;
+        border-radius: 5px;
       }
       #box {
         background-color: #1a1b26;
